{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 20,
  "lineage": "e49bc528-6f15-2e23-2425-d5965c63e2dd",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jungle_igw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:260236618763:internet-gateway/igw-0a8055252279602d3",
            "id": "igw-0a8055252279602d3",
            "owner_id": "260236618763",
            "tags": {
              "Name": "jungle-eks-igw"
            },
            "tags_all": {
              "Name": "jungle-eks-igw"
            },
            "vpc_id": "vpc-00c6e8554025642d7"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jungle_route_table",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:260236618763:route-table/rtb-089c3dc8baf8f07a2",
            "id": "rtb-089c3dc8baf8f07a2",
            "owner_id": "260236618763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8055252279602d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c6e8554025642d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.jungle_igw",
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jungle_route_table_association",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba185d9b4e7ab557",
            "route_table_id": "rtb-089c3dc8baf8f07a2",
            "subnet_id": "subnet-0970f4dc75659d01e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.jungle_igw",
            "module.network.aws_route_table.jungle_route_table",
            "module.network.aws_subnet.jungle_subnet",
            "module.network.aws_vpc.jungle_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0722bde7fa0b87807",
            "route_table_id": "rtb-089c3dc8baf8f07a2",
            "subnet_id": "subnet-0349e36d07e4ce1e7"
          },
          "dependencies": [
            "module.network.aws_route_table.jungle_route_table",
            "module.network.aws_subnet.jungle_subnet",
            "module.network.aws_vpc.jungle_vpc",
            "module.network.aws_internet_gateway.jungle_igw"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jungle_cluster_sg",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:260236618763:security-group/sg-0f083409dda6ca7e7",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f083409dda6ca7e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jungle-cluster-sg",
            "name_prefix": "",
            "owner_id": "260236618763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jungle-eks"
            },
            "tags_all": {
              "Name": "jungle-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c6e8554025642d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jungle_cluster_ingress",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2456154403",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f083409dda6ca7e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.jungle_cluster_sg",
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jungle_subnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:260236618763:subnet/subnet-0970f4dc75659d01e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0970f4dc75659d01e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260236618763",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-cluster": "shared"
            },
            "vpc_id": "vpc-00c6e8554025642d7"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:260236618763:subnet/subnet-0349e36d07e4ce1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0349e36d07e4ce1e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260236618763",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-cluster": "shared"
            },
            "vpc_id": "vpc-00c6e8554025642d7"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jungle_vpc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:260236618763:vpc/vpc-00c6e8554025642d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01878ee52b18fd3ba",
            "default_route_table_id": "rtb-06a4a52e4a2f5fb4b",
            "default_security_group_id": "sg-05718597e7fc95bba",
            "dhcp_options_id": "dopt-3c1bb957",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00c6e8554025642d7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06a4a52e4a2f5fb4b",
            "owner_id": "260236618763",
            "tags": {
              "Name": "jungle-vpc"
            },
            "tags_all": {
              "Name": "jungle-vpc"
            }
          }
        }
      ]
    }
  ]
}